[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Effects/fade.png" type="Texture" id=1]
[ext_resource path="res://Interfaces/DialogOverlay/dialog_overlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Global/global.gd" type="Script" id=3]
[ext_resource path="res://Interfaces/PauseScreen/pause_interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interfaces/Inventory/inventory_interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interfaces/Inventory/inventory_interface.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff : hint_range( 0.0, 1.0 );
uniform float smooth_size : hint_range( 0.0, 1.0 );
uniform sampler2D mask : hint_albedo;

void fragment()
{
	float value = texture( mask, UV ).r;
	float alpha = smoothstep( cutoff, cutoff + smooth_size, value * (1.0 - smooth_size) + smooth_size);
	COLOR = vec4( COLOR.rgb, alpha );
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/cutoff = 1.0
shader_param/smooth_size = 0.9
shader_param/mask = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4.92458, 0.225313 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Global" type="Node"]
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="DialogOverlay" parent="." instance=ExtResource( 2 )]

[node name="PauseInterface" parent="." instance=ExtResource( 4 )]

[node name="TransitionScreen" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="TransitionScreen"]
layer = 6

[node name="ColorRect" type="ColorRect" parent="TransitionScreen/CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionScreen/CanvasLayer/ColorRect"]
anims/Fade = SubResource( 3 )

[node name="Inventory" type="Control" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
